--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         Title="VPDB Agent" Height="350" Width="525">
     <Grid>
-        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="44,45,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="label" Content="Label 1" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top"/>
         <Button x:Name="button" Content="Button" HorizontalAlignment="Left" Margin="44,120,0,0" VerticalAlignment="Top" Width="75"/>
         <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="23" Margin="44,76,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="120"/>
 
