--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,40 +5,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VpdbAgent"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-		xmlns:UserControls="clr-namespace:VpdbAgent.Views"
+		xmlns:UserControls="clr-namespace:VpdbAgent.Pages"
         mc:Ignorable="d"
         Title="VPDB Agent" Height="800" Width="600">
     <DockPanel LastChildFill="True">
-        <Button Content="Dock=Left" DockPanel.Dock="Bottom"/>
-        <Grid>
-           
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="100" />
-                <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
 
-            <Button Grid.Row="0" Grid.Column="0" x:Name="SettingsButton" Content="Settings" HorizontalAlignment="Center" VerticalAlignment="Top" Width="75" Click="SettingsButton_Click" RenderTransformOrigin="4.624,5.858"/>
+        <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
+            <Label Content="Status info. All green." />
+            <Button  x:Name="SettingsButton" Content="Settings" Width="75" Click="SettingsButton_Click" />
+        </StackPanel>
 
-			
-            <GridSplitter HorizontalAlignment="Right" 
-                  VerticalAlignment="Stretch" 
-                  Grid.Column="1" ResizeBehavior="PreviousAndNext"
 
-                  Width="5" Background="#FFBCBCBC"/>
-            <Grid Grid.Row="0" Grid.Column="2" Background="#111">
-                <ItemsControl Name="ReleaseList">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <UserControls:ReleaseTemplate Release="{Binding}" Margin="4" />
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
+        <Frame x:Name="MainFrame"/>
 
-                </ItemsControl>
-            </Grid>
+        <!--ControlTemplate TargetType="MainFrame">
 
-        </Grid>
+            <StackPanel Margin="7" Orientation="Horizontal">
+                <Button Content="Avast! Go back!"  Command="{x:Static NavigationCommands.BrowseBack}" IsEnabled="{TemplateBinding CanGoBack}" />
+                <Button Content="Forward you dogs!" Command="{x:Static NavigationCommands.BrowseForward}" IsEnabled="{TemplateBinding CanGoForward}" />
+            </StackPanel>
+
+
+        </-->
 
     </DockPanel>
-   
 </Controls:MetroWindow>
