--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,7 +7,8 @@
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
 		xmlns:UserControls="clr-namespace:VpdbAgent.Pages"
         mc:Ignorable="d"
-        Title="VPDB Agent" Height="800" Width="600">
+		Title="{Binding Path=Content.Title, ElementName=MainFrame}"
+		Height="800" Width="600">
     <DockPanel LastChildFill="True">
 
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
