Fixed navigation buttons styles.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,6 +9,7 @@
         mc:Ignorable="d"
 		Title="{Binding Path=Content.Title, ElementName=MainFrame}"
 		Height="800" Width="600">
+
     <DockPanel LastChildFill="True">
 
         <StackPanel DockPanel.Dock="Bottom" Orientation="Horizontal">
@@ -21,29 +22,15 @@
                 <ControlTemplate TargetType="Frame">
                     <DockPanel Margin="7" >
                         <StackPanel Margin="7" Orientation="Horizontal" DockPanel.Dock="Top">
-                            <Button Command="{x:Static NavigationCommands.BrowseBack}" IsEnabled="{TemplateBinding CanGoBack}" Margin="0,0,10,0" >
-                                <Canvas Width="42.765" Height="73.997">
-                                    <Canvas>
-                                        <Path Fill="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" Data="F1 M 11.621,37.042 L 42.682,5.810 L 36.872,0.000 L 0.000,37.042 L 36.954,73.997 L 42.765,68.186 L 11.621,37.042 Z"/>
-                                    </Canvas>
+                            <Button Style="{StaticResource NavigationButton}" Command="{x:Static NavigationCommands.BrowseBack}" IsEnabled="{TemplateBinding CanGoBack}" Margin="0,0,20,0" >
+                                <Canvas Width="10.119" Height="17.509">
+                                    <Path Fill="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" Data="F1 M 2.750,8.765 L 10.099,1.375 L 8.724,0.000 L 0.000,8.765 L 8.744,17.509 L 10.119,16.134 L 2.750,8.765 Z"/>
                                 </Canvas>
-                                <Button.Style>
-                                    <Style TargetType="Button">
-                                        <Style.Triggers>
-                                            <Trigger Property="IsMouseOver" Value="True">
-                                                <Setter Property="Foreground" Value="Red" />
-                                            </Trigger>
-                                            <Trigger Property="IsMouseOver" Value="False">
-                                                <Setter Property="Foreground" Value="Gray" />
-                                            </Trigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Button.Style>
                             </Button>
-                            <Button Command="{x:Static NavigationCommands.BrowseForward}" IsEnabled="{TemplateBinding CanGoForward}">
-                                <Viewbox Width="15" Height="15">
-                                    <Frame Source="Resources/Icons/angle-right.xaml" />
-                                </Viewbox>
+                            <Button Style="{StaticResource NavigationButton}" Command="{x:Static NavigationCommands.BrowseForward}" IsEnabled="{TemplateBinding CanGoForward}">
+                                <Canvas Width="10.119" Height="17.509">
+                                    <Path Fill="{Binding Foreground, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" Data="F1 M 7.369,8.744 L 0.020,16.134 L 1.394,17.509 L 10.119,8.744 L 1.375,0.000 L 0.000,1.375 L 7.369,8.744 Z"/>
+                                </Canvas>
                             </Button>
                         </StackPanel>
                         <ContentPresenter />
