--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -17,15 +17,22 @@
         </Grid.ColumnDefinitions>
 
         <!-- LEFT PANEL -->
-        <StackPanel Grid.Row="0" Grid.Column="0" Orientation="Vertical">
+        <StackPanel Grid.Column="0" Orientation="Vertical">
             <Label Content="Title"/>
+            <ItemsControl Name="Systems">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Label Content="{Binding Name}"/>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
         </StackPanel>
 
         <!-- SPLITTER -->
-        <GridSplitter HorizontalAlignment="Right" VerticalAlignment="Stretch" Grid.Column="1" ResizeBehavior="PreviousAndNext" Width="3" Background="#40ffffff"/>
+        <GridSplitter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Width="3" Background="#40ffffff"/>
 
         <!-- RIGHT PANEL -->
-        <Grid Grid.Row="0" Grid.Column="2" Background="#111">
+        <Grid Grid.Column="2" Background="#111">
             <ScrollViewer>
 
                 <ItemsControl Name="ReleaseList">
