--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -4,14 +4,14 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:VpdbAgent.Pages"
-	  xmlns:UserControls="clr-namespace:VpdbAgent.Pages"
+	  xmlns:UserControls="clr-namespace:VpdbAgent.Views"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="300"
       Title="VPDB Agent">
 
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="100" />
+            <ColumnDefinition Width="150" />
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
@@ -35,10 +35,10 @@
         <Grid Grid.Column="2" Background="#111">
             <ScrollViewer>
 
-                <ItemsControl Name="ReleaseList">
+                <ItemsControl Name="GamesList">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <UserControls:ReleaseTemplate Release="{Binding}" Margin="4" />
+                            <UserControls:GameTemplate Game="{Binding}" Margin="4" />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
