--- a/Views/GameTemplate.xaml
+++ b/Views/GameTemplate.xaml
@@ -4,7 +4,8 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:VpdbAgent.Views"
-             mc:Ignorable="d" d:DesignWidth="300" Height="60">
+             mc:Ignorable="d" 
+             d:DesignWidth="300">
     <Grid >
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="50" />
@@ -13,8 +14,22 @@
 
         <Image Grid.Column="0" Width="50" Height="50"/>
         <StackPanel Grid.Column="1">
-            <Label Content="{Binding Filename}"/>
-            <Label Content="{Binding Description}"/>
+            <Label>
+                <TextBlock TextTrimming="CharacterEllipsis" Text="{Binding Description}" FontSize="22" FontWeight="Bold"/>
+            </Label>
+
+            <Grid Margin="0,-10,0,10">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                <Label Grid.Column="0">
+                    <TextBlock TextTrimming="CharacterEllipsis" Text="{Binding Filename}" />
+                </Label>
+                <Button Style="{StaticResource TertiaryButton}" Grid.Column="1" x:Name="IdentifyButton" Content="IDENTIFY" HorizontalAlignment="Right"/>
+            </Grid>
+           
+            <Border BorderBrush="#40ffffff" BorderThickness="0 0 0 1" />
         </StackPanel>
     </Grid>
 </UserControl>
