--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -32,7 +32,7 @@
         <GridSplitter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Width="3" Background="#40ffffff"/>
 
         <!-- RIGHT PANEL -->
-        <Grid Grid.Column="2" Background="#202020">
+        <Grid Grid.Column="2" Background="{StaticResource WhiterBrush}">
             <ScrollViewer>
 
                 <ItemsControl Name="GamesList">
