--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -13,7 +13,8 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200" />
             <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="21*" />
+            <ColumnDefinition Width="20*"/>
         </Grid.ColumnDefinitions>
 
         <!-- LEFT PANEL -->
@@ -32,7 +33,7 @@
         <GridSplitter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Width="3" Background="#40ffffff"/>
 
         <!-- RIGHT PANEL -->
-        <Grid Grid.Column="2" Background="{StaticResource WhiterBrush}">
+        <Grid Grid.Column="2" Background="{StaticResource WhiterBrush}" Grid.ColumnSpan="2">
             <ScrollViewer>
 
                 <ItemsControl ItemsSource="{Binding Games}">
