--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -30,13 +30,13 @@
         </StackPanel>
 
         <!-- SPLITTER -->
-        <GridSplitter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Width="3" Background="#40ffffff"/>
+        <GridSplitter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Stretch" ResizeBehavior="PreviousAndNext" Width="3" Background="Transparent"/>
 
         <!-- RIGHT PANEL -->
         <Grid Grid.Column="2" Background="{StaticResource WhiterBrush}" Grid.ColumnSpan="2">
             <ScrollViewer>
 
-                <ItemsControl ItemsSource="{Binding Games}">
+                <ItemsControl ItemsSource="{Binding Games}" Margin="0,10,0,10">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <UserControls:GameTemplate Game="{Binding}" Margin="4" />
