--- a/Controls/GameTemplate.xaml
+++ b/Controls/GameTemplate.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="VpdbAgent.Views.GameTemplate"
+﻿<UserControl x:Class="VpdbAgent.Controls.GameTemplate"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:VpdbAgent.Views"
+             xmlns:local="clr-namespace:VpdbAgent.Controls"
              mc:Ignorable="d" 
              d:DesignWidth="500"
              Padding="20,0,20,0">
