--- a/Controls/GameTemplate.xaml
+++ b/Controls/GameTemplate.xaml
@@ -14,7 +14,7 @@
         </Grid.ColumnDefinitions>
 
         <Image x:Name="Thumb" Grid.Column="0" Margin="0,10,0,0" Width="70" Height="70" VerticalAlignment="Top" HorizontalAlignment="Left"/>
-        <StackPanel Grid.Column="1">
+        <StackPanel x:Name="Panel" Grid.Column="1">
             <Label Margin="0,0,0,-10">
                 <TextBlock TextTrimming="CharacterEllipsis" Text="{Binding Id}" FontSize="22" FontWeight="Bold"/>
             </Label>
@@ -33,49 +33,6 @@
                 </Label>
                 <Button x:Name="IdentifyButton" Style="{StaticResource TertiaryButton}" Grid.Column="1" Content="IDENTIFY" HorizontalAlignment="Right" Click="IdentifyButton_Click"/>
             </Grid>
-
-            <!-- Identification results -->
-            <Expander Visibility="Collapsed" IsExpanded="False" x:Name="IdentifyResults" Style="{StaticResource AnimatedExpander}">
-                <Grid Margin="-110,0,-20,0">
-                    <Grid.Background>
-                        <SolidColorBrush Color="Black" Opacity="0.5" />
-                    </Grid.Background>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="110" />
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
-                    <Image Grid.Column="0" Width="20" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left"/>
-
-                    <StackPanel Grid.Column="1" Orientation="Vertical" Margin="0,5,10,5">
-                        <!-- Each result -->
-
-                        <ItemsControl ItemsSource="{Binding IdentifyResults}" Margin="0,10,0,10">
-                            <ItemsControl.ItemTemplate>
-                                <DataTemplate>
-                                    <Grid Margin="0,5,0,5">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="50" />
-                                            <ColumnDefinition Width="*" />
-                                            <ColumnDefinition Width="Auto" />
-                                        </Grid.ColumnDefinitions>
-
-                                        <Image Grid.Column="0" Width="50" Height="50"/>
-                                        <StackPanel Grid.Column="1" Orientation="Vertical">
-                                            <Label Grid.Column="1" Padding="0">
-                                                <TextBlock Text="Game name" TextTrimming="CharacterEllipsis" />
-                                            </Label>
-                                            <Label Grid.Column="2" Padding="0">
-                                                <TextBlock Text="Release Name" TextTrimming="CharacterEllipsis" />
-                                            </Label>
-                                        </StackPanel>
-                                        <Button Style="{StaticResource TertiaryButton}" Grid.Column="2" Content="SELECT" HorizontalAlignment="Right" Click="IdentifyButton_Click"/>
-                                    </Grid>
-                                </DataTemplate>
-                            </ItemsControl.ItemTemplate>
-                        </ItemsControl>
-                    </StackPanel>
-                </Grid>
-            </Expander>
             <Border BorderBrush="#40ffffff" BorderThickness="0 0 0 1" Margin="5,10,0,0"/>
         </StackPanel>
     </Grid>
