--- a/Pages/MainPage.xaml
+++ b/Pages/MainPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:VpdbAgent.Pages"
-	  xmlns:userControls="clr-namespace:VpdbAgent.Controls"
+	  xmlns:controls="clr-namespace:VpdbAgent.Controls"
       mc:Ignorable="d" 
       d:DesignHeight="300" d:DesignWidth="900"
       Title="VPDB Agent">
@@ -35,16 +35,14 @@
         <!-- RIGHT PANEL -->
         <Grid Grid.Column="2" Background="{StaticResource WhiterBrush}" Grid.ColumnSpan="2">
             <ScrollViewer>
-
                 <ItemsControl ItemsSource="{Binding Games}" Margin="0,10,0,10">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <userControls:GameTemplate Game="{Binding}" Margin="4" />
+                            <controls:GameTemplate Game="{Binding}" Margin="4" />
                         </DataTemplate>
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
             </ScrollViewer>
         </Grid>
-
     </Grid>
 </Page>
