--- a/Controls/ReleaseIdentifyResultsTemplate.xaml
+++ b/Controls/ReleaseIdentifyResultsTemplate.xaml
@@ -20,7 +20,19 @@
 
             <StackPanel Grid.Column="1" Orientation="Vertical" Margin="0,5,10,5">
 
-                <ItemsControl ItemsSource="{Binding Releases}" Margin="0,10,0,10">
+                <!-- no match found -->
+                <Grid  x:Name="NoResult"  Margin="0,5,10,5">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
+
+                    <Label Grid.Column="0" Content="No match found."/>
+                    <Button Grid.Column="1" Style="{StaticResource TertiaryButton}" Content="CLOSE" HorizontalAlignment="Right"/>
+                </Grid>
+
+                <!-- result list -->
+                <ItemsControl x:Name="Results" ItemsSource="{Binding Releases}" Margin="0,10,0,10">
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
                             <Grid Margin="0,5,10,5">
